@startuml class_financial
title Classes — Financial Management (billing, amendments, Internal Quote)

top to bottom direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 65
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

class Project {
  - code : String
  - currency : String
  - exchangeRateToTnd : BigDecimal
}

enum MilestoneStatus {
  PLANNED
  INVOICED
  PAID
}

class BillingMilestone {
  - label : String
  - percentage : BigDecimal
  - amount : BigDecimal
  - dueDate : LocalDate
  - status : MilestoneStatus
}

class Payment {
  - amountReceived : BigDecimal
  - paymentDate : LocalDate
  - reference : String
}

class Amendment {
  - number : String
  - subject : String
  - amount : BigDecimal
  - workloadDays : BigDecimal
}

enum QuoteSection {
  FEES
  EXPENSES
  OTHER_EXPENSES
}

class QuoteLine {
  - section : QuoteSection
  - contractProfile : String
  - soldWorkloadDays : BigDecimal
  - unitSellingPrice : BigDecimal
  - internalWorkloadDays : BigDecimal
  - unitTccCost : BigDecimal
  - percentageRate : BigDecimal
}

class Mission {
  - purpose : String
  - location : String
  - startDate : LocalDate
  - endDate : LocalDate
}

Project "1" *-- "*" BillingMilestone : milestones
BillingMilestone "1" *-- "*" Payment : payments
BillingMilestone ..> MilestoneStatus
Project "1" *-- "*" Amendment : amendments
Project "1" *-- "*" QuoteLine : internal quote
QuoteLine ..> QuoteSection
Project "1" *-- "*" Mission : missions
note right of BillingMilestone
  The sum of milestone percentages does not exceed 100% of the contract.
end note

note bottom of QuoteLine
  Amounts and margins are always computed at read time, never stored.
end note

@enduml
